# klyron

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  PLAN.md  README.md  SECURITY.md  TODO.md  clippy.toml  deny.toml  gen_bindings.py  generate_bindings.py  install.ps1  install.sh  klyron.json  libtypes.rlib  plan.md  rust-toolchain.toml  uninstall.sh
cli/: Cargo.toml
cli/src/: main.rs
crates/klyron_adapter/: Cargo.toml
crates/klyron_adapter/bindings/bash/: bench.sh  build.sh  clean.sh  dev.sh  test.sh
crates/klyron_adapter/bindings/c/: adapter.c  adapter.h  adapter_api.c  adapter_api.h  adapter_builder.c  adapter_builder.h  adapter_client.c  adapter_client.h  adapter_config.c  adapter_config.h  adapter_errors.c  adapter_errors.h
crates/klyron_adapter/bindings/cpp/: api.cpp  api.hpp  benchmark.cpp  benchmark.hpp  builder.cpp  builder.hpp  client.cpp  client.hpp  config.cpp  config.hpp  errors.hpp  ffi.cpp  ffi.hpp  types.hpp
crates/klyron_adapter/bindings/rust/: benchmark.rs  builder.rs  client.rs  config.rs  errors.rs  ffi.rs  server.rs  test_utils.rs  types.rs  wasm.rs
crates/klyron_adapter/bindings/ts/: benchmark.ts  client.ts  config.ts  declaration.d.ts  errors.ts  fixtures.ts  test.ts  types.ts  utils.ts
crates/klyron_adapter/src/: js_versions.rs  laravel_ecosystem.rs  lib.rs
crates/klyron_adapter/src/adapters/: adonis.rs  analog.rs  angular.rs  astro.rs  cakephp.rs  codeigniter.rs  django.rs  docpad.rs  express.rs  fastapi.rs  fastify.rs  flask.rs  gatsby.rs  hapi.rs  (+30 more)
crates/klyron_adapter/tests/: integration_test.rs
crates/klyron_ai/: Cargo.toml
crates/klyron_ai/src/: chat.rs  client.rs  completion.rs  embeddings.rs  lib.rs  tools.rs
crates/klyron_bench/: Cargo.toml
crates/klyron_bench/benches/: cli_bench.rs  engine_bench.rs  pm_bench.rs  polyfill_bench.rs
crates/klyron_bench/src/: compare.rs  engine.rs  lib.rs  lockfile.rs  report.rs  runner.rs
crates/klyron_bundler/: Cargo.toml
crates/klyron_bundler/src/: bundle.rs  lib.rs  minify.rs  resolve.rs  sourcemap.rs
crates/klyron_cli/: Cargo.toml
crates/klyron_cli/src/: anim.rs  color.rs  colors.rs  completions.rs  config.rs  doctor.rs  error.rs  lib.rs  logger.rs  main.rs  output.rs  progress.rs  scaffold_inline.rs  signal.rs  splash.rs  telemetry.rs  upgrade.rs
crates/klyron_config/: Cargo.toml
crates/klyron_config/src/: lib.rs  loader.rs  schema.rs  watch.rs
crates/klyron_crypto/: Cargo.toml
crates/klyron_crypto/src/: cron.rs  lib.rs
crates/klyron_deploy/: Cargo.toml
crates/klyron_deploy/src/: health.rs  lib.rs  rollback.rs  strategy.rs
crates/klyron_dns/: Cargo.toml
crates/klyron_dns/src/: cache.rs  dot.rs  lib.rs  resolver.rs
crates/klyron_docker/: Cargo.toml
crates/klyron_docker/src/: compose.rs  container.rs  image.rs  lib.rs
crates/klyron_engine/: Cargo.toml
crates/klyron_engine/benches/: engine_comparison.rs
crates/klyron_engine/src/: bytecode_cache.rs  cache.rs  coverage.rs  engine.rs  engine_pool.rs  es_module.rs  fallback.rs  features.rs  graph.rs  hotpatch.rs  lazy_compile.rs  lib.rs  memory_limits.rs  parallel.rs  polyglot.rs  pre_warm.rs  process.rs  profiler.rs  sandbox.rs  script_classifier.rs  snapshot.rs  sourcemap.rs  streaming.rs  traits.rs  warmup_cache.rs
crates/klyron_engine/tests/: integration.rs
crates/klyron_fs/: Cargo.toml
crates/klyron_fs/src/: glob.rs  lib.rs  temp.rs  virtual.rs  watch.rs
crates/klyron_fs/tests/: integration.rs
crates/klyron_http/: Cargo.toml
crates/klyron_http/src/: client.rs  cookie.rs  header.rs  http2.rs  lib.rs  middleware.rs  pool.rs  server.rs  sse.rs  static_files.rs  types.rs  ws.rs
crates/klyron_logger/: Cargo.toml
crates/klyron_logger/src/: format.rs  lib.rs  sink.rs
crates/klyron_lsp/: Cargo.toml
crates/klyron_lsp/src/: lib.rs  server.rs  types.rs
crates/klyron_mysql/: Cargo.toml
crates/klyron_mysql/src/: error.rs  lib.rs  migration.rs  pool.rs  query.rs  row.rs  transaction.rs
crates/klyron_node/: Cargo.toml
crates/klyron_node/src/: buffer.rs  compat.rs  event.rs  lib.rs  module.rs  polyfill.rs  require.rs
crates/klyron_permissions/: Cargo.toml
crates/klyron_permissions/src/: check.rs  lib.rs  policy.rs
crates/klyron_plugin/: Cargo.toml
crates/klyron_plugin/src/: hooks.rs  lib.rs  manifest.rs  runtime.rs  sandbox.rs
crates/klyron_pm/: Cargo.toml
crates/klyron_pm/src/: audit.rs  audit_log.rs  binary_lockfile.rs  bundle.rs  cors_csrf.rs  dedupe.rs  deprecate.rs  global.rs  install.rs  integrity.rs  lib.rs  license.rs  lockfile.rs  mirror.rs  pack.rs  pnpm_lock.rs  provenance.rs  publish.rs  rate_limit.rs  registry.rs  registry_config.rs  resolver.rs  scripts.rs  search.rs  secure_config.rs  signing.rs  tuf.rs  verify.rs  workspace.rs  yarn_lock.rs
crates/klyron_pm/tests/: integration.rs
crates/klyron_postgres/: Cargo.toml
crates/klyron_postgres/src/: lib.rs  migrate.rs  pool.rs
crates/klyron_process/: Cargo.toml
crates/klyron_process/src/: lib.rs  pipe.rs  spawn.rs
deploy/: Cargo.toml  config.rs
deploy/ci/: circleci.rs  github.rs  gitlab.rs  jenkins.rs
deploy/cloud/: aws.rs  azure.rs  cloudflare.rs  gcp.rs  heroku.rs  mod.rs  netlify.rs  vercel.rs
deploy/docker/: .dockerignore  Dockerfile.dev  Dockerfile.multi  Dockerfile.prod
deploy/kubernetes/: helm.rs  kustomize.rs  mod.rs
deploy/monitoring/: alerting.rs  health.rs  logging.rs  metrics.rs  mod.rs
deploy/serverless/: edge.rs  handler.rs  mod.rs  wasm.rs
engine-php/: Cargo.toml
engine-php/src/: artisan.rs  blade.rs  composer.rs  lib.rs  process.rs  wasm.rs
engine-python/: Cargo.toml
engine-python/src/: django.rs  fastapi.rs  flask.rs  lib.rs  native.rs  pip.rs  process.rs  wasm.rs
engine-ruby/: Cargo.toml
engine-ruby/src/: gem.rs  lib.rs  process.rs  rails.rs  sinatra.rs  wasm.rs
engine-v8/: Cargo.toml
engine-v8/src/: engine.rs  lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_http.rs  fuzz_lockfile.rs  fuzz_manifest.rs  fuzz_module.rs  fuzz_resolver.rs
(+3383 files in other folders)
