[workspace]
resolver = "2"
members = [
    "src/cli",
    "src/core",
    "src/ext/console",
    "src/ext/timers",
    "src/ext/web",
    "src/ext/crypto",
    "src/ext/fs",
    "src/ext/net",
    "src/ext/http",
    "src/ext/node",
    "src/ext/klyron",
    "src/ext/ffi",
    "src/ext/ws",
    "src/ext/html",
    "crates/klyron_adapter",
    "crates/klyron_ai",
    "crates/klyron_bench",
    "crates/klyron_bundler",
    "crates/klyron_cache",
    "crates/klyron_cli",
    "crates/klyron_compat",
    "crates/klyron_config",
    "crates/klyron_crypto",
    "crates/klyron_deploy",
    "crates/klyron_dns",
    "crates/klyron_docker",
    "crates/klyron_engine",
    "crates/klyron_formatter",
    "crates/klyron_fs",
    "crates/klyron_http",
    "crates/klyron_linter",
    "crates/klyron_loader",
    "crates/klyron_logger",
    "crates/klyron_mysql",
    "crates/klyron_napi",
    "crates/klyron_node",
    "crates/klyron_plugin",
    "crates/klyron_pm",
    "crates/klyron_postgres",
    "crates/klyron_process",
    "crates/klyron_registry",
    "crates/klyron_runtime",
    "crates/klyron_shell",
    "crates/klyron_sqlite",
    "crates/klyron_telemetry",
    "crates/klyron_template",
    "crates/klyron_test",
    "crates/klyron_transpiler",
    "crates/klyron_updater",
    "crates/klyron_utils",
    "crates/klyron_watcher",
    "crates/klyron_web",
    "crates/klyron_workspace",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Klyron Contributors"]
description = "Klyron - Universal Polyglot Runtime for JavaScript, TypeScript, PHP, Python, Ruby, Go, Zig, Rust, C, C++"
homepage = "https://klyron.dev"
repository = "https://github.com/aniipid/klyronjs"
readme = "README.md"

[workspace.dependencies]
deno_error = "0.7"
wasmtime = "28"
wasmtime-wasi = "28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
futures = "0.3"
lru = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
toml = "0.8"
notify = "6"
tempfile = "3"
rustyline = "14"
rustyline-derive = "0.10"
