[workspace]
resolver = "2"
default-members = [
    "src/cli",
    "src/core",
    "src/ext/console",
    "src/ext/timers",
    "src/ext/web",
    "src/ext/crypto",
    "src/ext/fs",
    "src/ext/net",
    "src/ext/http",
    "src/ext/node",
    "src/ext/klyron",
    "crates/klyron_cli",
    "crates/klyron_compat",
    "crates/klyron_config",
    "crates/klyron_engine",
    "crates/klyron_fs",
    "crates/klyron_loader",
    "crates/klyron_logger",
    "crates/klyron_node",
    "crates/klyron_runtime",
    "crates/klyron_debugger",
    "crates/klyron_utils",
    "crates/klyron_lsp",
]
members = [
    "src/cli",
    "src/core",
    "src/ext/console",
    "src/ext/timers",
    "src/ext/web",
    "src/ext/crypto",
    "src/ext/fs",
    "src/ext/net",
    "src/ext/http",
    "src/ext/node",
    "src/ext/klyron",
    "src/ext/ffi",
    "src/ext/ws",
    "src/ext/html",
    "src/ext/process",
    "crates/klyron_adapter",
    "crates/klyron_ai",
    "crates/klyron_bench",
    "crates/klyron_bundler",
    "crates/klyron_cache",
    "crates/klyron_debugger",
    "crates/klyron_cli",
    "crates/klyron_compat",
    "crates/klyron_config",
    "crates/klyron_crypto",
    "crates/klyron_deploy",
    "crates/klyron_dns",
    "crates/klyron_docker",
    "crates/klyron_engine",
    "crates/klyron_formatter",
    "crates/klyron_fs",
    "crates/klyron_http",
    "crates/klyron_linter",
    "crates/klyron_loader",
    "crates/klyron_logger",
    "crates/klyron_mysql",
    "crates/klyron_napi",
    "crates/klyron_node",
    "crates/klyron_plugin",
    "crates/klyron_pm",
    "crates/klyron_postgres",
    "crates/klyron_process",
    "crates/klyron_registry",
    "crates/klyron_runtime",
    "crates/klyron_shell",
    "crates/klyron_sqlite",
    "crates/klyron_telemetry",
    "crates/klyron_template",
    "crates/klyron_test",
    "crates/klyron_transpiler",
    "crates/klyron_updater",
    "crates/klyron_utils",
    "crates/klyron_watcher",
    "crates/klyron_web",
    "crates/klyron_workspace",
    "crates/klyron_intern",
    "crates/klyron_arena",
    "crates/klyron_lsp",
    "crates/klyron_serde",
    "engines/common",
    "engines/v8",
    "engines/boa",
    "engines/quickjs",
    "engines/jsc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Klyron Contributors"]
description = "Klyron - Universal Polyglot Runtime for JavaScript, TypeScript, PHP, Python, Ruby, Go, Zig, Rust, C, C++"
homepage = "https://klyron.dev"
repository = "https://github.com/dextryayers/klyron"
readme = "README.md"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
dashmap = "6"
deno_core = "0.403"
deno_error = "0.7"
dirs = "5"
ed25519-dalek = "3"
flate2 = "1"
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
hex = "0.4"
http = "1"
lru = "0.12"
mimalloc = "0.1"
notify = "6"
once_cell = "1"
parking_lot = "0.12"
rand = "0.8"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
rustyline = "14"
rustyline-derive = "0.10"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
simd-json = "0.14"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tikv-jemalloc-allocator = "0.6"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-flame = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
wasmtime = "28"
wasmtime-wasi = "28"
