[package]
name = "klyron"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
klyron-core = { path = "../core" }
klyron-ext-console = { path = "../ext/console" }
klyron-ext-timers = { path = "../ext/timers" }
klyron-ext-fs = { path = "../ext/fs" }
klyron-ext-net = { path = "../ext/net" }
klyron-ext-http = { path = "../ext/http" }
klyron-ext-crypto = { path = "../ext/crypto" }
klyron-ext-web = { path = "../ext/web" }
klyron-ext-html = { path = "../ext/html" }
klyron-ext-node = { path = "../ext/node" }
klyron-ext-klyron = { path = "../ext/klyron" }
klyron-ext-ffi = { path = "../ext/ffi" }
klyron-ext-ws = { path = "../ext/ws" }
deno_core = { version = "0.403" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
