[package]
name = "klyron_deploy_system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tera = "1"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
walkdir = "2"
tera = "1"
