[package]
name = "klyron-engine-php"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PHP/Laravel engine for Klyron — WASM + native PHP bridging"

[dependencies]
deno_core = { version = "0.403" }
deno_error.workspace = true
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"

# WASM runtime for PHP-WASM
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

# Native PHP embedding via phper (requires libphp+)
# phper = { version = "0.3", optional = true }

[features]
default = ["wasm"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
# native = ["dep:phper"]
