[package]
name = "klyron-engine-ruby"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ruby engine for Klyron — WASM + gem integration, Rails/Sinatra/Rack support"

[dependencies]
deno_core = { version = "0.403" }
deno_error.workspace = true
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }

# Ruby-WASM via wasmtime
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

[features]
default = ["wasm"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
