[package]
name = "klyron_adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["process", "fs", "rt", "macros"] }
klyron_template = { path = "../klyron_template" }
