[package]
name = "klyron_ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
lru.workspace = true
tokio = { workspace = true, features = ["sync"] }
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
