[package]
name = "klyron_bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
klyron_engine = { path = "../klyron_engine", features = ["all-engines"] }
klyron_pm = { path = "../klyron_pm" }
sha2 = "0.10"
