[package]
name = "klyron_bundler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
thiserror = "2"
once_cell = "1"
regex = "1"
path-clean = "1"
indexmap = "2"
