[package]
name = "klyron_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
klyron-core = { path = "../../src/core" }
klyron_adapter = { path = "../klyron_adapter" }
klyron_engine = { path = "../klyron_engine", features = ["all-engines"] }
klyron_test = { path = "../klyron_test" }
klyron_linter = { path = "../klyron_linter" }
klyron_formatter = { path = "../klyron_formatter" }
klyron_bench = { path = "../klyron_bench" }
klyron_compat = { path = "../klyron_compat" }
klyron_deploy = { path = "../klyron_deploy" }
klyron_docker = { path = "../klyron_docker" }
klyron_template = { path = "../klyron_template" }
klyron_workspace = { path = "../klyron_workspace" }
klyron_registry = { path = "../klyron_registry" }
klyron_pm = { path = "../klyron_pm" }
klyron_plugin = { path = "../klyron_plugin" }
klyron_napi = { path = "../klyron_napi" }
klyron_watcher = { path = "../klyron_watcher" }
klyron_shell = { path = "../klyron_shell" }
klyron_transpiler = { path = "../klyron_transpiler" }
klyron_bundler = { path = "../klyron_bundler" }
klyron_runtime = { path = "../klyron_runtime" }
klyron-ext-console = { path = "../../src/ext/console" }
klyron-ext-timers = { path = "../../src/ext/timers" }
klyron-ext-fs = { path = "../../src/ext/fs" }
klyron-ext-net = { path = "../../src/ext/net" }
klyron-ext-http = { path = "../../src/ext/http" }
klyron-ext-crypto = { path = "../../src/ext/crypto" }
klyron-ext-web = { path = "../../src/ext/web" }
klyron-ext-html = { path = "../../src/ext/html" }
klyron-ext-node = { path = "../../src/ext/node" }
klyron-ext-klyron = { path = "../../src/ext/klyron" }
klyron-ext-ffi = { path = "../../src/ext/ffi" }
klyron-ext-ws = { path = "../../src/ext/ws" }
klyron-ext-process = { path = "../../src/ext/process" }
deno_core.workspace = true
clap = { version = "4.5", features = ["derive", "env", "error-context", "help", "usage"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
clap_complete = "4.5"
toml = { workspace = true }
dirs = "5"
ureq = "2"
reqwest = { workspace = true, features = ["blocking", "json"] }
ctrlc = "3"
tokio-stream = "0.1"
klyron_config = { path = "../klyron_config" }
klyron_loader = { path = "../klyron_loader" }
mime_guess = "2"
