[package]
name = "klyron_config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
once_cell = "1"
tracing = "0.1"
regex = "1"
serde_yaml = "0.9"
notify = { workspace = true }
crossbeam-channel = { workspace = true }
schemars = "0.8"
