[package]
name = "klyron_crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
sha1 = "0.11"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "v7"] }
rand = "0.8"
anyhow = "1"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
bcrypt = "0.16"
argon2 = "0.5"
password-hash = "0.5"
chrono = "0.4"
