[package]
name = "klyron_deploy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
reqwest = { workspace = true, features = ["blocking"] }
tokio = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
