[package]
name = "klyron_dns"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls", "dns-over-tls", "dns-over-rustls"] }
hickory-proto = "0.24"
tokio = { version = "1", features = ["time", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.12"
