[package]
name = "klyron_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full", "time", "sync"] }
once_cell = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
bincode = "1"

[features]
v8 = ["dep:klyron-engine-v8"]
boa = ["dep:klyron-engine-boa"]
quickjs = ["dep:klyron-engine-quickjs"]
jsc = ["dep:klyron-engine-jsc"]
all-engines = ["v8", "boa", "quickjs", "jsc"]
default = []

[dependencies.klyron-engine-v8]
optional = true
path = "../../engines/v8"

[dependencies.klyron-engine-boa]
optional = true
path = "../../engines/boa"

[dependencies.klyron-engine-quickjs]
optional = true
path = "../../engines/quickjs"

[dependencies.klyron-engine-jsc]
optional = true
path = "../../engines/jsc"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_comparison"
harness = false
required-features = ["all-engines"]
