[package]
name = "klyron_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full", "time", "sync"] }
once_cell = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
bincode = "1"
sha2 = "0.10"
blake3 = "1"
lru = "0.12"
parking_lot = "0.12"
dirs = "5"
regex = "1"
chrono = "0.4"
inferno = { version = "0.11", optional = true }
rayon = { workspace = true }
async-trait = "0.1"
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[features]
boa = ["dep:klyron-engine-boa"]
quickjs = ["dep:klyron-engine-quickjs"]
all-engines = ["boa", "quickjs"]
inferno = ["dep:inferno"]
default = []

[dependencies.klyron-engine-boa]
optional = true
path = "../../engines/boa"

[dependencies.klyron-engine-quickjs]
optional = true
path = "../../engines/quickjs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wat = "1"

[[bench]]
name = "engine_comparison"
harness = false
required-features = ["all-engines"]
