[package]
name = "klyron_fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
tracing = "0.1"
walkdir = "2"
memmap2 = "0.9"
tempfile = "3"
rayon = "1"
