[package]
name = "klyron_fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
glob.workspace = true
notify.workspace = true
rayon.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
memmap2 = "0.9"
