[package]
name = "klyron_http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hyper = { version = "1", features = ["full"] }
tungstenite = "0.24"
futures-util = "0.3"
