[package]
name = "klyron_http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
