[package]
name = "klyron_http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.7", features = ["fs", "cors", "trace"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
parking_lot = "0.12"
tracing = "0.1"
reqwest = { workspace = true, features = ["rustls-tls", "http2"] }
tokio-tungstenite = "0.24"
tokio-stream = "0.1"
