[package]
name = "klyron_logger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
crossbeam-channel = "0.5"
flate2 = "1"
tokio = { version = "1", features = ["sync"] }
libc = "0.2"
