[package]
name = "klyron_mysql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
