[package]
name = "klyron_node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
base64 = "0.22"
once_cell = "1"
lru = "0.12"
thiserror = "2"
sha1 = "0.11"
sha2 = "0.10"
md-5 = "0.10"
chrono = "0.4"
