[package]
name = "klyron_permissions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
glob = "0.3"
dirs = "5"
parking_lot = "0.12"
chrono = "0.4"
