[package]
name = "klyron_plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
notify.workspace = true
anyhow.workspace = true
sha2.workspace = true
tracing.workspace = true
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
walkdir = "2"
dirs = "5"
