[package]
name = "klyron_pm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
semver = "1"
thiserror = "2"
chrono = "0.4"
once_cell = "1"
regex = "1"
glob = "0.3"
walkdir = "2"
