[package]
name = "klyron_pm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pubgrub = { version = "0.3", features = ["serde"] }
version-ranges = { version = "0.1", features = ["semver"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
semver = "1"
thiserror = "2"
chrono = "0.4"
once_cell = "1"
regex = "1"
glob = "0.3"
walkdir = "2"
bincode = "1"
flate2 = "1"
tar = "0.4"
dirs = "5"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
reqwest = { workspace = true, features = ["blocking"] }
tracing = { workspace = true }
blake3 = "1"
serde_yaml = "0.9"
