[package]
name = "klyron_postgres"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
thiserror = "2"
serde_json = "1"
futures = "0.3"
bytes = "1"
