[package]
name = "klyron_process"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time"] }
nix = { version = "0.29", features = ["signal", "process"] }
