[package]
name = "klyron_process"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["process", "io-util", "time", "rt", "macros"] }
nix = { version = "0.29", features = ["signal", "process"] }
